# package-tracker

./: .gitignore  Makefile  Readme.md  docker-compose.yaml
.circleci/: config.yml
client/: Dockerfile  package-lock.json  package.json
client/nginx/: nginx.conf
client/public/: index.html
client/src/: App.css  App.js
client/src/components/: InfoForm.js  Map.js  NavBar.js  PackageCard.js
client/src/components/pages/: Home.js  Login.js  Signup.js  Tracking.js
client/src/services/: auth-header.js  auth-service.js  comment-service.js  like-service.js  package-service.js  post-service.js
k8s/: api-deployemt.yaml  api-service.yaml  certs.yaml  ingress.yaml  makecerts  setup  web-deployment.yaml  web-service.yaml
server/: Dockerfile  api.py  config.py  manage.py  models.py  package-tracker.yml  packageRoutes.py  packageSort.py  requirements.txt  test.py  track.py  userRoutes.py
services/api/: Dockerfile  api.py  models.py  packageRoutes.py  packageSort.py  package_routes.py  pyproject.toml  run.py  userRoutes.py  user_routes.py  wait_for_db.py
services/api/app/: app.py  database.py  models.py
services/api/app/outgoing/: track.py
services/api/app/routes/: packageRoutes.py  package_routes.py  userRoutes.py  user_routes.py
services/nginx/: Dockerfile.dev  default.conf
services/web-react/: Dockerfile.dev  config.sh  default.conf  nginx.conf  package-lock.json
services/web-react/app/: .env  package.json
services/web-react/app/public/: index.html
services/web-react/app/src/: Constants.js  theme.js
services/web-react/src/: Constants.js
(+8 files in other folders)
