[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Tim Potts <timpotts1095@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
sqlalchemy = ">=1.4.42,<1.5"
databases = "0.8.0"
uvicorn = "^0.25.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
